--- a/Enums/TransportType.html
+++ b/Enums/TransportType.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="../index.html">
           SimplyCoreAudio Docs
         </a>
-         (100% documented)
+         (99% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -118,7 +118,7 @@
               <div class="declaration">
                 <div class="language">
                   
-                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TransportType</span></code></pre>
+                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TransportType</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
 
                 </div>
               </div>
@@ -151,7 +151,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">unknown</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">unknown</span> <span class="o">=</span> <span class="s">"Unknown"</span></code></pre>
 
                         </div>
                       </div>
@@ -178,7 +178,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">builtIn</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">builtIn</span> <span class="o">=</span> <span class="s">"Built-In"</span></code></pre>
 
                         </div>
                       </div>
@@ -205,7 +205,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">aggregate</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">aggregate</span> <span class="o">=</span> <span class="s">"Aggregate"</span></code></pre>
 
                         </div>
                       </div>
@@ -232,7 +232,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">virtual</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">virtual</span> <span class="o">=</span> <span class="s">"Virtual"</span></code></pre>
 
                         </div>
                       </div>
@@ -259,7 +259,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">pci</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">pci</span> <span class="o">=</span> <span class="s">"PCI"</span></code></pre>
 
                         </div>
                       </div>
@@ -286,7 +286,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">usb</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">usb</span> <span class="o">=</span> <span class="s">"USB"</span></code></pre>
 
                         </div>
                       </div>
@@ -313,7 +313,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">fireWire</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">fireWire</span> <span class="o">=</span> <span class="s">"FireWire"</span></code></pre>
 
                         </div>
                       </div>
@@ -340,7 +340,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">bluetooth</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">bluetooth</span> <span class="o">=</span> <span class="s">"Bluetooth"</span></code></pre>
 
                         </div>
                       </div>
@@ -367,7 +367,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">bluetoothLE</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">bluetoothLE</span> <span class="o">=</span> <span class="s">"Bluetooth LE"</span></code></pre>
 
                         </div>
                       </div>
@@ -394,7 +394,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">hdmi</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">hdmi</span> <span class="o">=</span> <span class="s">"HDMI"</span></code></pre>
 
                         </div>
                       </div>
@@ -421,7 +421,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">displayPort</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">displayPort</span> <span class="o">=</span> <span class="s">"DisplayPort"</span></code></pre>
 
                         </div>
                       </div>
@@ -448,7 +448,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">airPlay</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">airPlay</span> <span class="o">=</span> <span class="s">"AirPlay"</span></code></pre>
 
                         </div>
                       </div>
@@ -475,7 +475,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">avb</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">avb</span> <span class="o">=</span> <span class="s">"AVB"</span></code></pre>
 
                         </div>
                       </div>
@@ -502,7 +502,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">thunderbolt</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">thunderbolt</span> <span class="o">=</span> <span class="s">"Thunderbolt"</span></code></pre>
 
                         </div>
                       </div>
