--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="index.html">
           SimplyCoreAudio Docs
         </a>
-         (100% documented)
+         (99% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -176,7 +176,7 @@ whether as <code><a href="Classes/AudioDevice.html">AudioDevice</a></code> may, 
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TerminalType</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TerminalType</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
 
                         </div>
                       </div>
@@ -204,7 +204,7 @@ whether as <code><a href="Classes/AudioDevice.html">AudioDevice</a></code> may, 
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TransportType</span></code></pre>
+                          <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TransportType</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
 
                         </div>
                       </div>
