--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums/TerminalType.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/Enums/TerminalType.html
@@ -23,7 +23,7 @@
         <a class="header-link" href="../index.html">
           SimplyCoreAudio Docs
         </a>
-         (100% documented)
+         (99% documented)
       </p>
     
       <p class="header-col--secondary">
@@ -118,7 +118,7 @@
               <div class="declaration">
                 <div class="language">
                   
-                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TerminalType</span></code></pre>
+                  <pre class="highlight swift"><code><span class="kd">public</span> <span class="kd">enum</span> <span class="kt">TerminalType</span> <span class="p">:</span> <span class="kt">String</span></code></pre>
 
                 </div>
               </div>
@@ -151,7 +151,7 @@
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">unknown</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">unknown</span> <span class="o">=</span> <span class="s">"Unknown"</span></code></pre>
 
                         </div>
                       </div>
@@ -179,7 +179,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">line</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">line</span> <span class="o">=</span> <span class="s">"Line"</span></code></pre>
 
                         </div>
                       </div>
@@ -207,7 +207,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">digitalAudioInterface</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">digitalAudioInterface</span> <span class="o">=</span> <span class="s">"Digital Audio Interface"</span></code></pre>
 
                         </div>
                       </div>
@@ -234,7 +234,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">speaker</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">speaker</span> <span class="o">=</span> <span class="s">"Speaker"</span></code></pre>
 
                         </div>
                       </div>
@@ -261,7 +261,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">headphones</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">headphones</span> <span class="o">=</span> <span class="s">"Headphones"</span></code></pre>
 
                         </div>
                       </div>
@@ -288,7 +288,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">lfeSpeaker</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">lfeSpeaker</span> <span class="o">=</span> <span class="s">"LFE Speaker"</span></code></pre>
 
                         </div>
                       </div>
@@ -315,7 +315,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">receiverSpeaker</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">receiverSpeaker</span> <span class="o">=</span> <span class="s">"Receiver Speaker"</span></code></pre>
 
                         </div>
                       </div>
@@ -342,7 +342,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">microphone</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">microphone</span> <span class="o">=</span> <span class="s">"Microphone"</span></code></pre>
 
                         </div>
                       </div>
@@ -369,7 +369,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">headsetMicrophone</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">headsetMicrophone</span> <span class="o">=</span> <span class="s">"Headset Microphone"</span></code></pre>
 
                         </div>
                       </div>
@@ -396,7 +396,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">receiverMicrophone</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">receiverMicrophone</span> <span class="o">=</span> <span class="s">"Receiver Microphone"</span></code></pre>
 
                         </div>
                       </div>
@@ -423,7 +423,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">tty</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">tty</span> <span class="o">=</span> <span class="s">"TTY"</span></code></pre>
 
                         </div>
                       </div>
@@ -450,7 +450,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">hdmi</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">hdmi</span> <span class="o">=</span> <span class="s">"HDMI"</span></code></pre>
 
                         </div>
                       </div>
@@ -477,7 +477,7 @@ Note that this applies to both input streams and output streams.</p>
                         <h4>Declaration</h4>
                         <div class="language">
                           <p class="aside-title">Swift</p>
-                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">displayPort</span></code></pre>
+                          <pre class="highlight swift"><code><span class="k">case</span> <span class="n">displayPort</span> <span class="o">=</span> <span class="s">"DisplayPort"</span></code></pre>
 
                         </div>
                       </div>
