publish: Adding link to demo project.
generated from commit c9737f8c30df1944b1564cf01cd6e0f48987f3f7

--- a/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
+++ b/docsets/SimplyCoreAudio.docset/Contents/Resources/Documents/index.html
@@ -382,6 +382,11 @@
 <pre class="highlight shell"><code><span class="nb">sudo </span>launchctl <span class="nb">kill </span>KILL system/com.apple.audio.coreaudiod
 </code></pre></li>
 </ol>
+<h3 id='demo-project' class='heading'>Demo Project</h3>
+
+<ul>
+<li><a href="https://github.com/rnine/SimplyCoreAudioDemo">SimplyCoreAudioDemo</a> — a basic SwiftUI-based demo showcasing device enumeration and notifications.</li>
+</ul>
 <h3 id='license' class='heading'>License</h3>
 
 <p><code><a href="Classes/SimplyCoreAudio.html">SimplyCoreAudio</a></code> was written by Ruben Nine (<a href="https://github.com/rnine">@rnine</a>) in 2013-2014 (open-sourced in March 2014) and is licensed under the <a href="https://opensource.org/licenses/MIT">MIT</a> license. See <a href="LICENSE.md">LICENSE.md</a>.</p>
